tests/v05-vertical-slice/accept/lambda_callable_tell.hew
// Accept fixture: tell-shaped lambda actor with call-syntax dispatch.
// `actor |s: String| { ... }` produces `Duplex<String, ()>`.
// Call `log("x")` returns `Result<(), SendError>` at the type level.
// WASM-PASS: type-check level only for slice 2; runtime landing is slice 4.
fn main() {
    let log = actor |s: String| {
        println(s);
    };
    log("hello");
}
